welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(getDirection() != Direction.NORD){
  ^SnakeBuggle:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(getDirection() != Direction.EST){
  ^SnakeBuggle:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if(murhaut && estFaceMur()){
        ^SnakeBuggle:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(getDirection() != original){
  ^SnakeBuggle:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false;
  ^